Intentando sacar unas estadísticas de la longitud de secuencias

--- a/code/notebooks/annotations.ipynb
+++ b/code/notebooks/annotations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
        "11  ftp.sra.ebi.ac.uk/vol1/run/ERR753/ERR753378/C3...      NaN  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -913,43 +913,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "CompletedProcess(args=['bash', 'calculating_length', 'chr3'], returncode=0)"
+       "CompletedProcess(args=['bash', 'joining_files.sh'], returncode=0)"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "## Change the chr that you want\n",
-    "subprocess.run([\"bash\", \"calculating_length\", \"chr3\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 148,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def len_seq(file):\n",
-    "    sequences = open(file, \"r\") \n",
-    "    nseq_list = []\n",
+    "for chr in [\"chr3\", \"chr5\"]:\n",
+    "    subprocess.run([\"bash\", \"calculating_length.sh\", chr])\n",
     "\n",
-    "    for line in sequences:\n",
-    "        nseq_list.append(len(line) -1)\n",
-    "    return np.array(nseq_list).mean() "
+    "subprocess.run([\"bash\", \"joining_files.sh\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -962,127 +950,498 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SAMPLE ERR696683 "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mean legth of the sequences for the sample ERR696683 is ->  75.5 +/- 1.28\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(list_files_path[0]) as file:\n",
+    "    sample6_83_lines = file.readlines()\n",
+    "    \n",
+    "len_lines_sample6_83 = []\n",
+    "for string in sample6_83_lines:\n",
+    "    len_lines_sample6_83.append(len(string) -1)\n",
+    "    \n",
+    "mean_sample6_83 = pd.Series(len_lines_sample6_83).mean().round(2)\n",
+    "std_sample6_83 = pd.Series(len_lines_sample6_83).std().round(2)\n",
+    "print(\"The mean legth of the sequences for the sample ERR696683 is -> \",\n",
+    "      mean_sample6_83,\n",
+    "      \"+/-\",\n",
+    "      std_sample6_83)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SAMPLE ERR753368 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mean legth of the sequences for the sample ERR753368 is ->  75.89 +/- 0.7\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(list_files_path[6]) as file:\n",
+    "    sample7_68_lines = file.readlines()\n",
+    "    \n",
+    "len_lines_sample7_68 = []\n",
+    "for string in sample7_68_lines:\n",
+    "    len_lines_sample7_68.append(len(string) -1)\n",
+    "    \n",
+    "mean_sample7_68 = pd.Series(len_lines_sample7_68).mean().round(2)\n",
+    "std_sample7_68 = pd.Series(len_lines_sample7_68).std().round(2)\n",
+    "print(\"The mean legth of the sequences for the sample ERR753368 is -> \", \n",
+    "      mean_sample7_68,\n",
+    "      \"+/-\",\n",
+    "      std_sample7_68)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SAMPLE ERR753369 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mean legth of the sequences for the sample ERR753369 is ->  75.89 +/- 0.7\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(list_files_path[7]) as file:\n",
+    "    sample7_69_lines = file.readlines()\n",
+    "    \n",
+    "len_lines_sample7_69 = []\n",
+    "for string in sample7_69_lines:\n",
+    "    len_lines_sample7_69.append(len(string) -1)\n",
+    "    \n",
+    "mean_sample7_69 = pd.Series(len_lines_sample7_69).mean().round(2)\n",
+    "std_sample7_69 = pd.Series(len_lines_sample7_69).std().round(2)\n",
+    "print(\"The mean legth of the sequences for the sample ERR753369 is -> \",\n",
+    "      mean_sample7_69,\n",
+    "      \"+/-\",\n",
+    "      std_sample7_69)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SAMPLE ERR753370 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mean legth of the sequences for the sample ERR753370 is ->  100.66 +/- 1.24\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(list_files_path[5]) as file:\n",
+    "    sample7_70_lines = file.readlines()\n",
+    "    \n",
+    "len_lines_sample7_70 = []\n",
+    "for string in sample7_70_lines:\n",
+    "    len_lines_sample7_70.append(len(string) -1)\n",
+    "    \n",
+    "mean_sample7_70 = pd.Series(len_lines_sample7_70).mean().round(2)\n",
+    "std_sample7_70 = pd.Series(len_lines_sample7_70).std().round(2)\n",
+    "print(\"The mean legth of the sequences for the sample ERR753370 is -> \", \n",
+    "      mean_sample7_70,\n",
+    "      \"+/-\",\n",
+    "      std_sample7_70)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SAMPLE ERR753371 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mean legth of the sequences for the sample ERR753371 is ->  75.26 +/- 1.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(list_files_path[1]) as file:\n",
+    "    sample7_71_lines = file.readlines()\n",
+    "    \n",
+    "len_lines_sample7_71 = []\n",
+    "for string in sample7_71_lines:\n",
+    "    len_lines_sample7_71.append(len(string) -1)\n",
+    "    \n",
+    "mean_sample7_71 = pd.Series(len_lines_sample7_71).mean().round(2)\n",
+    "std_sample7_71 = pd.Series(len_lines_sample7_71).std().round(2)\n",
+    "print(\"The mean legth of the sequences for the sample ERR753371 is -> \", \n",
+    "      mean_sample7_71,\n",
+    "      \"+/-\",\n",
+    "      std_sample7_71)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SAMPLE ERR753371 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mean legth of the sequences for the sample ERR753371 is ->  75.89 +/- 0.7\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(list_files_path[11]) as file:\n",
+    "    sample7_71_lines = file.readlines()\n",
+    "    \n",
+    "len_lines_sample7_71 = []\n",
+    "for string in sample7_71_lines:\n",
+    "    len_lines_sample7_71.append(len(string) -1)\n",
+    "    \n",
+    "mean_sample7_71 = pd.Series(len_lines_sample7_71).mean().round(2)\n",
+    "std_sample7_71 = pd.Series(len_lines_sample7_71).std().round(2)\n",
+    "print(\"The mean legth of the sequences for the sample ERR753371 is -> \", \n",
+    "      mean_sample7_71,\n",
+    "      \"+/-\",\n",
+    "      std_sample7_71)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SAMPLE ERR753372 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mean legth of the sequences for the sample ERR753372 is ->  100.66 +/- 1.24\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(list_files_path[5]) as file:\n",
+    "    sample7_72_lines = file.readlines()\n",
+    "    \n",
+    "len_lines_sample7_72 = []\n",
+    "for string in sample7_72_lines:\n",
+    "    len_lines_sample7_72.append(len(string) -1)\n",
+    "    \n",
+    "mean_sample7_72 = pd.Series(len_lines_sample7_72).mean().round(2)\n",
+    "std_sample7_72 = pd.Series(len_lines_sample7_72).std().round(2)\n",
+    "print(\"The mean legth of the sequences for the sample ERR753372 is -> \", \n",
+    "      mean_sample7_72,\n",
+    "      \"+/-\",\n",
+    "      std_sample7_72)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SAMPLE ERR753373 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mean legth of the sequences for the sample ERR753373 is ->  94.75 +/- 2.15\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(list_files_path[3]) as file:\n",
+    "    sample7_73_lines = file.readlines()\n",
+    "    \n",
+    "len_lines_sample7_73 = []\n",
+    "for string in sample7_73_lines:\n",
+    "    len_lines_sample7_73.append(len(string) -1)\n",
+    "    \n",
+    "mean_sample7_73 = pd.Series(len_lines_sample7_73).mean().round(2)\n",
+    "std_sample7_73 = pd.Series(len_lines_sample7_73).std().round(2)\n",
+    "print(\"The mean legth of the sequences for the sample ERR753373 is -> \", \n",
+    "      mean_sample7_73,\n",
+    "      \"+/-\",\n",
+    "      std_sample7_73)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SAMPLE ERR753374 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mean legth of the sequences for the sample ERR753374 is ->  94.64 +/- 2.27\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(list_files_path[2]) as file:\n",
+    "    sample7_74_lines = file.readlines()\n",
+    "    \n",
+    "len_lines_sample7_74 = []\n",
+    "for string in sample7_74_lines:\n",
+    "    len_lines_sample7_74.append(len(string) -1)\n",
+    "    \n",
+    "mean_sample7_74 = pd.Series(len_lines_sample7_74).mean().round(2)\n",
+    "std_sample7_74 = pd.Series(len_lines_sample7_74).std().round(2)\n",
+    "print(\"The mean legth of the sequences for the sample ERR753374 is -> \", \n",
+    "      mean_sample7_74,\n",
+    "      \"+/-\",\n",
+    "      std_sample7_74)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SAMPLE ERR753375 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mean legth of the sequences for the sample ERR753375 is ->  75.53 +/- 1.23\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(list_files_path[8]) as file:\n",
+    "    sample7_75_lines = file.readlines()\n",
+    "    \n",
+    "len_lines_sample7_75 = []\n",
+    "for string in sample7_75_lines:\n",
+    "    len_lines_sample7_75.append(len(string) -1)\n",
+    "    \n",
+    "mean_sample7_75 = pd.Series(len_lines_sample7_75).mean().round(2)\n",
+    "std_sample7_75 = pd.Series(len_lines_sample7_75).std().round(2)\n",
+    "print(\"The mean legth of the sequences for the sample ERR753375 is -> \", \n",
+    "      mean_sample7_75,\n",
+    "      \"+/-\",\n",
+    "      std_sample7_75)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SAMPLE ERR753376 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mean legth of the sequences for the sample ERR753376 is ->  75.5 +/- 1.28\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(list_files_path[9]) as file:\n",
+    "    sample7_76_lines = file.readlines()\n",
+    "    \n",
+    "len_lines_sample7_76 = []\n",
+    "for string in sample7_76_lines:\n",
+    "    len_lines_sample7_76.append(len(string) -1)\n",
+    "    \n",
+    "mean_sample7_76 = pd.Series(len_lines_sample7_76).mean().round(2)\n",
+    "std_sample7_76 = pd.Series(len_lines_sample7_76).std().round(2)\n",
+    "print(\"The mean legth of the sequences for the sample ERR753376 is -> \", \n",
+    "      mean_sample7_76,\n",
+    "      \"+/-\",\n",
+    "      std_sample7_76)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SAMPLE ERR753377 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mean legth of the sequences for the sample ERR753377 is ->  94.64 +/- 2.27\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(list_files_path[2]) as file:\n",
+    "    sample7_77_lines = file.readlines()\n",
+    "    \n",
+    "len_lines_sample7_77 = []\n",
+    "for string in sample7_77_lines:\n",
+    "    len_lines_sample7_77.append(len(string) -1)\n",
+    "    \n",
+    "mean_sample7_77 = pd.Series(len_lines_sample7_77).mean().round(2)\n",
+    "std_sample7_77 = pd.Series(len_lines_sample7_77).std().round(2)\n",
+    "print(\"The mean legth of the sequences for the sample ERR753377 is -> \", \n",
+    "      mean_sample7_77,\n",
+    "      \"+/-\",\n",
+    "      std_sample7_77)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SAMPLE ERR753378 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mean legth of the sequences for the sample ERR753376 is ->  94.64 +/- 2.27\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(list_files_path[2]) as file:\n",
+    "    sample7_78_lines = file.readlines()\n",
+    "    \n",
+    "len_lines_sample7_78 = []\n",
+    "for string in sample7_78_lines:\n",
+    "    len_lines_sample7_78.append(len(string) -1)\n",
+    "    \n",
+    "mean_sample7_78 = pd.Series(len_lines_sample7_78).mean().round(2)\n",
+    "std_sample7_78 = pd.Series(len_lines_sample7_78).std().round(2)\n",
+    "print(\"The mean legth of the sequences for the sample ERR753378 is -> \", \n",
+    "      mean_sample7_78,\n",
+    "      \"+/-\",\n",
+    "      std_sample7_78)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "forward_reads = list(filter(lambda item: \"_1\" in item, list_files_path))\n",
-    "reverse_reads = list(filter(lambda item: \"_2\" in item, list_files_path))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Chromosome 3 Average length of the sequences from Illumina"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[95.66227977732335, 95.75120258678717, 75.6077983747361, 75.35631220150502, 75.92791305407802, 75.6002062331167, 75.9314087619132, 75.92949464557249, 75.92889658262038, 75.59816108252527, 75.54190951497412, 100.67011641108675]\n",
-      "Total mean forward reads Chromosome 3->  81.12547493551988\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'../../results/annotations/ERR753376.txt'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "forward_means_ch3 = [] \n",
-    "for file in forward_reads: \n",
-    "    forward_means_ch3.append(len_seq(file))\n",
-    "\n",
-    "print(forward_means_ch3)\n",
-    "\n",
-    "total_mean_chr3 = np.array(forward_means_ch3).mean()\n",
-    "print(\"Total mean forward reads Chromosome 3-> \", total_mean_chr3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 152,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[75.85488904930602, 75.85537050971455, 75.85673424633259, 75.40398325868385, 75.16638270514372, 75.4296781283438, 93.7339779980848, 75.52415302387575, 75.39615676119118, 75.85678405704276, 93.6036021930432, 100.64511203199162]\n",
-      "Total mean reverse reads Chromosome 3 ->  80.69390199689616\n"
-     ]
-    }
-   ],
-   "source": [
-    "reverse_means_chr3 = [] \n",
-    "for file in reverse_reads: \n",
-    "    reverse_means_chr3.append(len_seq(file))\n",
-    "\n",
-    "print(reverse_means_chr3)\n",
-    "\n",
-    "total_mean_chr3 = np.array(reverse_means_chr3).mean()\n",
-    "print(\"Total mean reverse reads Chromosome 3 -> \", total_mean_chr3)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Chromosome 5 Average length of the sequences from Illumina"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[95.66227977732335, 75.92889658262038, 75.35631220150502, 75.9314087619132, 95.75120258678717, 75.6002062331167, 75.92791305407802, 75.54190951497412, 75.92949464557249, 100.67011641108675, 75.59816108252527, 75.6077983747361]\n",
-      "Total mean forward reads Chromosome 3->  81.12547493551989\n"
-     ]
-    }
-   ],
-   "source": [
-    "forward_means_chr5 = [] \n",
-    "for file in forward_reads: \n",
-    "    forward_means_chr5.append(len_seq(file))\n",
-    "\n",
-    "print(forward_means_chr5)\n",
-    "\n",
-    "total_mean_chr5 = np.array(forward_means_ch3).mean()\n",
-    "print(\"Total mean forward reads Chromosome 5 -> \", total_mean_chr5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[100.64511203199162, 75.52415302387575, 75.85673424633259, 75.85678405704276, 93.7339779980848, 75.40398325868385, 75.4296781283438, 75.85537050971455, 75.85488904930602, 75.16638270514372, 93.6036021930432, 75.39615676119118]\n",
-      "Total mean reverse reads Chromosome 3->  80.69390199689616\n"
-     ]
-    }
-   ],
-   "source": [
-    "reverse_means_chr5 = [] \n",
-    "for file in reverse_reads: \n",
-    "    reverse_means_chr5.append(len_seq(file))\n",
-    "\n",
-    "print(reverse_means_chr5)\n",
-    "\n",
-    "total_mean_chr5 = np.array(reverse_means_chr5).mean()\n",
-    "print(\"Total mean reverse reads Chromosome 5 -> \", total_mean_chr5)"
+    "list_files_path[9]"
    ]
   }
  ],
