--- a/code/notebooks/instructions.ipynb
+++ b/code/notebooks/instructions.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is how your config file and your_sample_list should look:"
+    "This is how your config file and your_sample_list should look like:"
    ]
   },
   {
@@ -143,15 +143,15 @@
     "# 1 rule download data\n",
     "snakemake --cores 1 download_data\n",
     "# 2 rule pre_processing\n",
-    "snakemake --cores 1 data/raw/ERR696683_chr3_sorted.bam\n",
+    "snakemake --cores 1 data/original_bam/filtering/ERR696683_chr3_sorted.bam\n",
     "# 3 rule reference_genome\n",
     "snakemake --cores 1 data/reference/genome.fa\n",
     "# 4 rule fastqc\n",
-    "snakemake --cores 1 results/fastqc_results/ERR696683_chr3_1_fastqc.html ; snakemake --cores 1 results/fastqc_results/ERR7533{68..78}_chr3_1_fastqc.html  \n",
+    "snakemake --cores 1 results/fastqc_result/ERR696683_chr3_1_fastqc.html ; snakemake --cores 1 results/fastqc_result/ERR7533{68..78}_chr3_1_fastqc.html  \n",
     "# 5 rule fastp\n",
     "snakemake --cores 1 data/processed/ERR696683_chr3_1_fastp.fastq.gz ; snakemake --cores 1 data/processed/ERR7533{68..78}_chr3_1_fastp.fastq.gz  \n",
     "# 6 rule fastqc_trimmed\n",
-    "snakemake --cores 1 results/fastqc_results/trimmed/ERR696683_chr3_1_fastp_fastqc.html ; snakemake --cores 1 results/fastqc_results/trimmed/ERR7533{68..78}_chr3_1_fastp_fastqc.html  \n",
+    "snakemake --cores 1 results/fastqc_result/trimmed/ERR696683_chr3_1_fastp_fastqc.html ; snakemake --cores 1 results/fastqc_result/trimmed/ERR7533{68..78}_chr3_1_fastp_fastqc.html  \n",
     "# 7 rule bwa_mapping\n",
     "snakemake --cores 1 results/mapped_reads/ERR696683_chr3_sorted.sam ; snakemake --cores 1 results/mapped_reads/ERR7533{68..78}_chr3_sorted.sam  \n",
     "# 8 rule sam_to_bam\n",
@@ -163,9 +163,9 @@
     "# 11 rule vep_install_db\n",
     "snakemake --cores 1 vep_install_db\n",
     "# 12 rule vep_cli\n",
-    "snakemake --cores 1 results/variants/vep/ERR696683_chr3.txt ; snakemake --cores 1 results/variants/vep/ERR7533{68..78}_chr3.txt \n",
+    "snakemake --cores 1 results/variants/vep/ERR696683_chr3.txt --use-conda ; snakemake --cores 1 results/variants/vep/ERR7533{68..78}_chr3.txt --use-conda\n",
     "# 13 rule parsing_dataR\n",
-    "snakemake --cores 1 parsing_dataR"
+    "snakemake --cores 1 parsing_dataR --use-conda"
    ]
   },
   {
@@ -194,15 +194,15 @@
    "outputs": [],
    "source": [
     "# 2 rule pre_processing\n",
-    "snakemake --cores 1 data/raw/ERR696683_chrx_sorted.bam\n",
+    "snakemake --cores 1 data/original_bam/filtering/ERR696683_chrx_sorted.bam \n",
     "# 3 rule reference_genome\n",
-    "snakemake --cores 1 data/reference/genome.fa\n",
+    "snakemake --cores 1 data/reference/genome.fa --force\n",
     "# 4 rule fastqc\n",
-    "snakemake --cores 1 results/fastqc_results/ERR696683_chrx_1_fastqc.html ; snakemake --cores 1 results/fastqc_results/ERR7533{68..78}_chrx_1_fastqc.html  \n",
+    "snakemake --cores 1 results/fastqc_result/ERR696683_chrx_1_fastqc.html ; snakemake --cores 1 results/fastqc_result/ERR7533{68..78}_chrx_1_fastqc.html  \n",
     "# 5 rule fastp\n",
     "snakemake --cores 1 data/processed/ERR696683_chrx_1_fastp.fastq.gz ; snakemake --cores 1 data/processed/ERR7533{68..78}_chrx_1_fastp.fastq.gz  \n",
     "# 6 rule fastqc_trimmed\n",
-    "snakemake --cores 1 results/fastqc_results/trimmed/ERR696683_chrx_1_fastp_fastqc.html ; snakemake --cores 1 results/fastqc_results/trimmed/ERR7533{68..78}_chrx_1_fastp_fastqc.html  \n",
+    "snakemake --cores 1 results/fastqc_result/trimmed/ERR696683_chrx_1_fastp_fastqc.html ; snakemake --cores 1 results/fastqc_result/trimmed/ERR7533{68..78}_chrx_1_fastp_fastqc.html  \n",
     "# 7 rule bwa_mapping\n",
     "snakemake --cores 1 results/mapped_reads/ERR696683_chrx_sorted.sam ; snakemake --cores 1 results/mapped_reads/ERR7533{68..78}_chrx_sorted.sam  \n",
     "# 8 rule sam_to_bam\n",
@@ -212,9 +212,9 @@
     "# 10 rule extracting_variants\n",
     "snakemake --cores 1 results/variants/ERR696683_chrx.vcf ; snakemake --cores 1 results/variants/ERR7533{68..78}_chrx.vcf \n",
     "# 12 rule vep_cli\n",
-    "snakemake --cores 1 results/variants/vep/ERR696683_chrx.txt ; snakemake --cores 1 results/variants/vep/ERR7533{68..78}_chrx.txt \n",
+    "snakemake --cores 1 results/variants/vep/ERR696683_chrx.txt --use-conda ; snakemake --cores 1 results/variants/vep/ERR7533{68..78}_chrx.txt --use-conda\n",
     "# 13 rule parsing_dataR\n",
-    "snakemake --cores 1 parsing_dataR"
+    "snakemake --cores 1 parsing_dataR --use-conda"
    ]
   },
   {
