--- a/code/notebooks/annotations.ipynb
+++ b/code/notebooks/annotations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1366,7 +1366,7 @@
     }
    ],
    "source": [
-    "with open(list_files_path[2]) as file:\n",
+    "with open(list_files_path[10]) as file:\n",
     "    sample7_77_lines = file.readlines()\n",
     "    \n",
     "len_lines_sample7_77 = []\n",
@@ -1402,7 +1402,7 @@
     }
    ],
    "source": [
-    "with open(list_files_path[2]) as file:\n",
+    "with open(list_files_path[4]) as file:\n",
     "    sample7_78_lines = file.readlines()\n",
     "    \n",
     "len_lines_sample7_78 = []\n",
@@ -1426,22 +1426,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'../../results/annotations/ERR753376.txt'"
+       "['../../results/annotations/ERR696683.txt',\n",
+       " '../../results/annotations/ERR753371.txt',\n",
+       " '../../results/annotations/ERR753374.txt',\n",
+       " '../../results/annotations/ERR753373.txt',\n",
+       " '../../results/annotations/ERR753378.txt',\n",
+       " '../../results/annotations/ERR753370.txt',\n",
+       " '../../results/annotations/ERR753368.txt',\n",
+       " '../../results/annotations/ERR753369.txt',\n",
+       " '../../results/annotations/ERR753375.txt',\n",
+       " '../../results/annotations/ERR753376.txt',\n",
+       " '../../results/annotations/ERR753377.txt',\n",
+       " '../../results/annotations/ERR753372.txt']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list_files_path[9]"
+    "list_files_path"
    ]
   }
  ],
