Trabajo en notebooks, calculando la longitud de secuencias

--- a/code/notebooks/instructions.ipynb
+++ b/code/notebooks/instructions.ipynb
@@ -179,8 +179,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Change the values in the config.yaml and your_sample_list.\n",
-    "* Chromosmes, reference_genome and the gene that you are looking for "
+    "* Change the values of the config.yaml and your_sample_list.\n",
+    "* Chromosmes, reference genome and the gene that you are looking for "
    ]
   },
   {
@@ -196,7 +196,7 @@
     "# 2 rule pre_processing\n",
     "snakemake --cores 1 data/original_bam/filtering/ERR696683_chrx_sorted.bam \n",
     "# 3 rule reference_genome\n",
-    "snakemake --cores 1 data/reference/genome.fa --force\n",
+    "snakemake --cores 1 data/reference/genome.fa --force ## if you haven't delete the contente of data/reference \n",
     "# 4 rule fastqc\n",
     "snakemake --cores 1 results/fastqc_result/ERR696683_chrx_1_fastqc.html ; snakemake --cores 1 results/fastqc_result/ERR7533{68..78}_chrx_1_fastqc.html  \n",
     "# 5 rule fastp\n",
@@ -221,7 +221,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## After all chromosomes tables are create\n",
+    "## After all chromosomes tables are created\n",
     "\n",
     "* In this case you can execute the last rule, for plotting your data in ggplot2"
    ]
@@ -236,7 +236,7 @@
    },
    "outputs": [],
    "source": [
-    "snakemake --cores 1 R_plotting"
+    "snakemake --cores 1 R_plotting --use-conda"
    ]
   }
  ],
