Gráfico del promidio de longitud de secuencias por muestra

--- a/code/notebooks/annotations.ipynb
+++ b/code/notebooks/annotations.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -936,13 +936,13 @@
        "CompletedProcess(args=['bash', 'joining_files.sh'], returncode=0)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "## heavy computing +25 min\n",
+    "## heavy computing +25 min -> you need all fastq.gz files in data/raw/\n",
     "\n",
     "for chr in [\"chr3\", \"chr5\", \"chr7\", \"chr12\", \"chr17\"]:\n",
     "    subprocess.run([\"bash\", \"calculating_length.sh\", chr])\n",
@@ -952,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -967,25 +967,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mean value of  <_io.TextIOWrapper name='../../results/annotations/ERR753374_len.txt' mode='r' encoding='UTF-8'>  ->  94.61 +/- 2.29\n",
-      "mean value of  <_io.TextIOWrapper name='../../results/annotations/ERR753373_len.txt' mode='r' encoding='UTF-8'>  ->  94.72 +/- 2.18\n",
-      "mean value of  <_io.TextIOWrapper name='../../results/annotations/ERR753375_len.txt' mode='r' encoding='UTF-8'>  ->  75.51 +/- 1.26\n",
-      "mean value of  <_io.TextIOWrapper name='../../results/annotations/ERR753372_len.txt' mode='r' encoding='UTF-8'>  ->  75.89 +/- 0.73\n",
-      "mean value of  <_io.TextIOWrapper name='../../results/annotations/ERR753370_len.txt' mode='r' encoding='UTF-8'>  ->  100.64 +/- 1.27\n",
-      "mean value of  <_io.TextIOWrapper name='../../results/annotations/ERR696683_len.txt' mode='r' encoding='UTF-8'>  ->  75.48 +/- 1.31\n",
-      "mean value of  <_io.TextIOWrapper name='../../results/annotations/ERR753376_len.txt' mode='r' encoding='UTF-8'>  ->  75.48 +/- 1.31\n",
-      "mean value of  <_io.TextIOWrapper name='../../results/annotations/ERR753378_len.txt' mode='r' encoding='UTF-8'>  ->  75.89 +/- 0.73\n",
-      "mean value of  <_io.TextIOWrapper name='../../results/annotations/ERR753371_len.txt' mode='r' encoding='UTF-8'>  ->  75.24 +/- 1.53\n",
-      "mean value of  <_io.TextIOWrapper name='../../results/annotations/ERR753369_len.txt' mode='r' encoding='UTF-8'>  ->  75.89 +/- 0.73\n",
-      "mean value of  <_io.TextIOWrapper name='../../results/annotations/ERR753377_len.txt' mode='r' encoding='UTF-8'>  ->  75.5 +/- 1.29\n",
-      "mean value of  <_io.TextIOWrapper name='../../results/annotations/ERR753368_len.txt' mode='r' encoding='UTF-8'>  ->  75.89 +/- 0.73\n"
+      "mean value of  ERR753374  ->  94.61 +/- 2.29\n",
+      "mean value of  ERR753373  ->  94.72 +/- 2.18\n",
+      "mean value of  ERR753375  ->  75.51 +/- 1.26\n",
+      "mean value of  ERR753372  ->  75.89 +/- 0.73\n",
+      "mean value of  ERR753370  ->  100.64 +/- 1.27\n",
+      "mean value of  ERR696683  ->  75.48 +/- 1.31\n",
+      "mean value of  ERR753376  ->  75.48 +/- 1.31\n",
+      "mean value of  ERR753378  ->  75.89 +/- 0.73\n",
+      "mean value of  ERR753371  ->  75.24 +/- 1.53\n",
+      "mean value of  ERR753369  ->  75.89 +/- 0.73\n",
+      "mean value of  ERR753377  ->  75.5 +/- 1.29\n",
+      "mean value of  ERR753368  ->  75.89 +/- 0.73\n"
      ]
     }
    ],
@@ -993,15 +993,19 @@
     "list_mean_len = []\n",
     "list_sd_len = []\n",
     "\n",
-    "for file in list_files_path:\n",
+    "for file_path in list_files_path:\n",
     "\n",
-    "    with open(file) as file:\n",
+    "    with open(file_path) as file:\n",
     "        len_list = file.readlines()\n",
     "    \n",
     "    mean_seq_len = np.array([s.strip() for s in len_list]).astype(int).mean().round(2)\n",
     "    sd_seq_len = np.array([s.strip() for s in len_list]).astype(int).std().round(2)\n",
     "    \n",
-    "    print(\"mean value of \", file, \" -> \", mean_seq_len, \"+/-\", sd_seq_len)\n",
+    "    print(\"mean value of \", file_path.replace(\n",
+    "        \"../../results/annotations/\", \"\"\n",
+    "        ).replace(\n",
+    "            \"_len.txt\", \"\"\n",
+    "            ), \" -> \", mean_seq_len, \"+/-\", sd_seq_len)\n",
     "\n",
     "    list_mean_len.append(mean_seq_len)\n",
     "    list_sd_len.append(sd_seq_len)\n"
@@ -1009,15 +1013,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_7561/3359814889.py:7: FutureWarning: The default value of regex will change from True to False in a future version.\n",
-      "/tmp/ipykernel_7561/3359814889.py:8: FutureWarning: The default value of regex will change from True to False in a future version.\n"
+      "/tmp/ipykernel_4425/3359814889.py:7: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "  df_len_seq[\"sample\"] = df_len_seq[\"sample\"].str.replace(\"../../results/annotations/\", \"\")\n",
+      "/tmp/ipykernel_4425/3359814889.py:8: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "  df_len_seq[\"sample\"] = df_len_seq[\"sample\"].str.replace(\"_len.txt\", \"\")\n"
      ]
     }
    ],
@@ -1036,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1050,8 +1056,7 @@
       "dbl (2): mean_len, sd_len\n",
       "\n",
       "ℹ Use `spec()` to retrieve the full column specification for this data.\n",
-      "ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.\n",
-      "Saving 7 x 7 in image\n"
+      "ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.\n"
      ]
     },
     {
@@ -1060,7 +1065,7 @@
        "CompletedProcess(args=['Rscript', 'plot_mean_len.R'], returncode=0)"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1075,15 +1080,10 @@
    "source": [
     "<p align=\"center\">\n",
     " \n",
-    "  <img src=\"mean_len.png\" alt=\"800\" width=\"900\" />\n",
+    "  <img src=\"../../results/objective/mean_len.png\" alt=\"800\" width=\"900\" />\n",
     "\n",
     "</p>"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
