--- a/code/notebooks/annotations.ipynb
+++ b/code/notebooks/annotations.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,6 +22,7 @@
     "# Base packages\n",
     "import subprocess\n",
     "import os\n",
+    "import re\n",
     "# Data manipulation\n",
     "import pandas as pd\n",
     "import numpy as np"
@@ -624,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -891,7 +892,7 @@
        "11   25.82x(1x-847x)           99,70 %  203 338   9 474  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -922,12 +923,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Mean depth of the project"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "135.00333333333336"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "table3_csv[\"Sequencing depth (X)\"].str.replace(\",\",\".\").astype(float).mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## **Calculating the AVERAGE sequence length for each sample**  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -936,7 +964,7 @@
        "CompletedProcess(args=['bash', 'joining_files.sh'], returncode=0)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -952,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -967,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1083,6 +1111,31 @@
     "  <img src=\"../../results/objective/mean_len.png\" alt=\"800\" width=\"900\" />\n",
     "\n",
     "</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **Number of Seqs before and after fastp**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subprocess.run([\"bash\", \"fastp_analysis.sh\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.read_csv(\"fastp_analysis.tsv\", sep=\"\\t\")"
    ]
   }
  ],
